# Downloader

./: .gitattributes  .gitignore  BUGS_TO_FIX.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  downloadmanager.cpp  downloadmanager.h  downloadtask.cpp  downloadtask.h  historydialog.cpp  historydialog.h  historydialog.ui  historymanager.cpp  historymanager.h  httpserver.cpp  httpserver.h  httpworker.cpp  httpworker.h  icon.qrc  localserver.cpp  localserver.h  logger.h  logs_config.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newtaskdialog.cpp  newtaskdialog.h  newtaskdialog.ui  protocolregistrar.cpp  protocolregistrar.h  scheduledialog.cpp  scheduledialog.h  scheduledialog.ui  schedulemanager.cpp  schedulemanager.h  settingsdialog.cpp  (+12 more)
.cache/clangd/index/: downloadmanager.cpp.15D8022FF8429555.idx  downloadmanager.h.64BA93FB75231013.idx  downloadtask.cpp.48AFF829AE7D75E5.idx  downloadtask.h.585121D67CBD0362.idx  historymanager.cpp.37163C541EDFEA57.idx  historymanager.h.02C3FCDDE161DC84.idx  httpworker.cpp.F0A3D899F49E7932.idx  httpworker.h.BC4E54E4370506AF.idx  localserver.cpp.52E7314B13D08A39.idx  localserver.h.15D439E1280D7061.idx  logger.h.1BAC0C86FA4599A2.idx  main.cpp.19A12ACC74DD8F3F.idx  mainwindow.cpp.552A379A144613D2.idx  mainwindow.h.DDECF9918DA6ED35.idx  newtaskdialog.cpp.A019D8AFC359EBAF.idx  newtaskdialog.h.1F90653B465E1636.idx  settingsdialog.cpp.27836318ECAF4CC6.idx  settingsdialog.h.E1D1D5967DB256DF.idx  settingsmanager.cpp.E4B9AAA8769C53C1.idx  systemtray.cpp.A0F181A1B8A03F6F.idx  systemtray.h.7525F1A9EFBC9860.idx
installer/: build.bat  config.xml  installer.qs
installer/portable/: README.txt  start.bat
release-page/: index.html  script.js  style.css
styles/: dark.qss  light.qss
tools/: deploy.bat  run_binarycreator.sh
translations/: TRANSLATOR_NOTES.md  en_US.qm  en_US.ts  zh_CN.qm  zh_CN.ts
插件/: README.md  background.js  manifest.json  popup.html  popup.js  test.html
